--- a/src/components/content-container/ContentContainer.scss
+++ b/src/components/content-container/ContentContainer.scss
@@ -57,7 +57,7 @@
 	width: 80%;
 }
 
-@include respond(phone) {
+@include respond(tab-port) {
 	.content-container {
 		background: url('../../assets/svgs/mobile_backgrounds/default_background.svg');
 		background-size: cover;
@@ -65,7 +65,7 @@
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		display: flex;
-		justify-content: start;
+		justify-content: flex-start;
 		flex-flow: column;
 		height: 100%;
 		width: 100%;
