--- a/src/components/excuse-modal/ExcuseModal.scss
+++ b/src/components/excuse-modal/ExcuseModal.scss
@@ -11,8 +11,8 @@
     height: 100%;
     .excuse-content-header {
         display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
+        flex-direction: row;
+        justify-content: space-around;
         width: 95%;
         height: 2.8rem;
          @include respond(desktop) {
@@ -29,7 +29,6 @@
         }
         .excuse-title {
             display: block;
-            width: 90%;
             font-family: "BAHNSCHRIFT";
             font-size: 1.8rem;
             @include respond(desktop) {
