--- a/src/pages/class-page/ClassPage.scss
+++ b/src/pages/class-page/ClassPage.scss
@@ -248,7 +248,7 @@
 				&::-webkit-scrollbar-thumb {
 					border-radius: 10px;
 					box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-					background-color: lightgray;
+					background-color: var(--scroll-color);
 				}
 				.notification-individual-container {
 					padding: 0.5rem 0;
